
[TestRenderSettingspage - 1]
<!doctype html>
<html data-theme="dark">
  <head>
    <title>
      Cycling Coach Lab
    </title>
    <meta charset="utf-8">
    <meta name="robots" content="noindex">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
    <meta name="htmx-config" content="{&#34;useTemplateFragments&#34;:true}">
    <link rel="stylesheet" href="/assets/styles.css">
    <link rel="stylesheet" href="/assets/base.css">
    <!-- htmx -->
    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
    <script src="https://unpkg.com/htmx.org/dist/ext/path-params.js"></script>
    <script src="https://unpkg.com/htmx.org/dist/ext/response-targets.js"></script>
    <!-- Alpine Plugins -->
    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
    <!-- Alpine Core -->
    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
    <!-- Font Awesome -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/solid.min.css" integrity="sha512-tk4nGrLxft4l30r9ETuejLU0a3d7LwMzj0eXjzc16JQj+5U1IeVoCuGLObRDc3+eQMUcEQY1RIDPGvuA7SNQ2w==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <script src="https://kit.fontawesome.com/e219cbc312.js" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  </head>
  <body class="font-sans">
    <div class="drawer w-full h-full lg:drawer-open">
      <input id="drawer" type="checkbox" class="drawer-toggle">
      <div class="drawer-content w-full h-full" hx-ext="response-targets">
        <div id="navbar" data-cy="navbar" class="w-full navbar bg-base-300">
          <div class="flex-none lg:hidden">
            <label for="drawer" aria-label="open sidebar" data-cy="sidebar-open" class="btn btn-square btn-ghost">
              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-6 h-6 stroke-current">
                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
              </svg>
            </label>
          </div>
          <div class="flex-1 px-2 mx-2">
            <div class="lg:hidden">
              Cycling coach lab
            </div>
          </div>
          <div class="flex-none">
            <div data-cy="open-navbar-action-menu" class="dropdown dropdown-end">
              <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
                <!-- TODO: use logged in user name here-->
                <style type="text/css">
                  .bgColor_807e{background-color:#C01C15;}
                </style>
                <div class="flex items-center w-10 h-10 rounded-full bgColor_807e">
                  <span class="mx-auto font-bold text-gray-900">
                    JD
                  </span>
                </div>
              </div>
              <ul data-cy="navbar-action-menu" tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-200 rounded-box w-52">
                <li>
                  <a class="justify-between">
                    Profile
                    <span class="badge">
                      New
                    </span>
                  </a>
                </li>
                <li>
                  <a data-cy="settings" hx-trigger="click" hx-get="/settings/view" hx-target="#dashboard-view">
                    Settings
                  </a>
                </li>
                <li>
                  <a data-cy="logout" hx-trigger="click" hx-post="/auth/logout">
                    Logout
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <!-- Page content here -->
        <div id="main-content" class="flex-1 flex-row container mx-auto overflow-y-auto">
          <div id="dashboard-view" class="w-full h-full p-6">
            <div class="flex flex-col gap-6">
              <div class="prose">
                <h1>
                  Einstellungen
                </h1>
              </div>
              <!-- Theme selection -->
              <div class="flex flex-wrap gap-6">
                <div class="card bg-base-200  prose w-full lg:w-fit">
                  <div class="card-body">
                    <h3 class="card-title">
                      Theme auswählen
                    </h3>
                    <form data-cy="theme-switcher" hx-post="/settings/theme">
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Light
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="light">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Retro
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="retro">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Corporate
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="corporate">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Dracula
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="dracula">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Nord
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="nord">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Dark
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="dark" checked>
                        </label>
                      </div>
                      <div class="card-actions justify-end">
                        <button data-cy="save-theme" type="submit" class="btn">
                          Bestätigen
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
                <!-- Reset application -->
                <div class="card bg-warning text-warning-content prose">
                  <div class="card-body">
                    <h3 class="card-title text-black">
                      Anwendung zurücksetzen
                      <i class="fas fa-exclamation-triangle"></i>
                    </h3>
                    <p>
                      Wenn du die Anwendung zurücksetzt, werden
                      <b>
                        ALLE
                      </b>
                      Daten gelöscht. Dazu gehören alle Benutzer und deren Trainingsdaten. Das betrifft auch deine Trainingsdaten, deine Einstellungen und dein Account. Du kannst die Anwendung dann wieder neu einrichten. Bist du sicher, dass du die Anwendung zurücksetzen möchtest?
                    </p>
                    <p>
                      Diese Aktion kann nicht rückgängig gemacht werden.
                    </p>
                    <form class="card-actions justify-end" hx-post="/settings/reset" hx-swap="none">
                      <button data-cy="reset" type="submit" class="btn btn-error">
                        Anwendung zurücksetzen
                      </button>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-cy="sidebar" class="drawer-side">
        <label for="drawer" aria-label="close sidebar" data-cy="sidebar-overlay" class="drawer-overlay"></label>
        <ul class="menu p-4 md:min-w-72 min-h-full bg-base-300">
          <!-- Sidebar content here -->
          <h2 class="prose p4 mx-2 my-1 hidden lg:block">
            Cycling coach lab
          </h2>
          <li class="mt-2"></li>
        </ul>
      </div>
    </div>
    <script defer src="/assets/toasts.js" type="text/javascript"></script>
  </body>
</html>
---

[TestReset/Not_authorized - 1]

---

[TestReset/migrator_error - 1]

---

[TestReset/Success - 1]

---

[TestSetTheme - 1]

---

[TestRenderSettingsPage - 1]
<!doctype html>
<html data-theme="dark">
  <head>
    <title>
      Cycling Coach Lab
    </title>
    <meta charset="utf-8">
    <meta name="robots" content="noindex">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
    <meta name="htmx-config" content="{&#34;useTemplateFragments&#34;:true}">
    <link rel="icon" href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;🚴&lt;/text&gt;&lt;/svg&gt;">
    <link rel="stylesheet" href="/assets/styles.css">
    <link rel="stylesheet" href="/assets/base.css">
    <!-- htmx -->
    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
    <script src="https://unpkg.com/htmx.org/dist/ext/path-params.js"></script>
    <script src="https://unpkg.com/htmx.org/dist/ext/response-targets.js"></script>
    <!-- Alpine Plugins -->
    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
    <!-- Alpine Core -->
    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
    <!-- Font Awesome -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/solid.min.css" integrity="sha512-tk4nGrLxft4l30r9ETuejLU0a3d7LwMzj0eXjzc16JQj+5U1IeVoCuGLObRDc3+eQMUcEQY1RIDPGvuA7SNQ2w==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <script src="https://kit.fontawesome.com/e219cbc312.js" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  </head>
  <body class="font-sans">
    <div class="drawer w-full h-full lg:drawer-open">
      <input id="drawer" type="checkbox" class="drawer-toggle">
      <div class="drawer-content w-full h-full" hx-ext="response-targets">
        <div id="navbar" data-cy="navbar" class="w-full navbar bg-base-300">
          <div class="flex-none lg:hidden">
            <label for="drawer" aria-label="open sidebar" data-cy="sidebar-open" class="btn btn-square btn-ghost">
              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-6 h-6 stroke-current">
                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
              </svg>
            </label>
          </div>
          <div class="flex-1 px-2 mx-2">
            <div class="lg:hidden">
              Cycling coach lab
            </div>
          </div>
          <div class="flex-none">
            <div x-data="{
        dropdownOpen: false
    }" class="relative mr-4">
              <button @click="dropdownOpen=true" data-cy="open-navbar-action-menu">
                <style type="text/css">
                  .bgColor_807e{background-color:#C01C15;}
                </style>
                <div class="flex items-center w-10 h-10 rounded-full bgColor_807e">
                  <span class="mx-auto font-bold text-gray-900">
                    JD
                  </span>
                </div>
              </button>
              <div x-show="dropdownOpen" @click.away="dropdownOpen=false" x-transition:enter="ease-out duration-200" x-transition:enter-start="-translate-y-2" x-transition:enter-end="translate-y-0" class="absolute top-0 z-50 w-56 mt-12 right-0" x-cloak data-cy="navbar-action-menu">
                <div class="p-1 mt-1 bg-base-200 border rounded-md shadow-lg border-base-300 text-current">
                  <div class="px-2 py-1.5 text-sm font-semibold">
                    Mein Account
                  </div>
                  <div class="h-px my-1 -mx-1 bg-neutral-content"></div>
                  <a @click="dropdownOpen=false" href="#_" class="relative flex cursor-pointer select-none hover:bg-base-300 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50" data-disabled>
                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2">
                      <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
                      <circle cx="12" cy="7" r="4"></circle>
                    </svg>
                    <span>
                      Profile
                    </span>
                  </a>
                  <a @click="dropdownOpen=false" href="#_" class="relative flex cursor-pointer select-none hover:bg-base-300 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50" data-cy="settings" hx-trigger="click" hx-get="/settings/view" hx-target="#dashboard-view" hx-replace-url="/settings">
                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2">
                      <path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"></path>
                      <circle cx="12" cy="12" r="3"></circle>
                    </svg>
                    <span>
                      Einstellungen
                    </span>
                    <span class="ml-auto text-xs tracking-widest badge">
                      Neu
                    </span>
                  </a>
                  <div class="h-px my-1 -mx-1 bg-neutral-content"></div>
                  <a @click="dropdownOpen=false" href="https://github.com/michelm117/cycling-coach-lab" target="_blank" class="relative flex cursor-pointer select-none hover:bg-base-300 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50">
                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2">
                      <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path>
                      <path d="M9 18c-4.51 2-5-2-7-2"></path>
                    </svg>
                    <span>
                      GitHub
                    </span>
                  </a>
                  <a href="#_" @click="dropdownOpen=false" class="relative flex cursor-pointer select-none hover:bg-base-300 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50" data-disabled>
                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2">
                      <circle cx="12" cy="12" r="10"></circle>
                      <circle cx="12" cy="12" r="4"></circle>
                      <line x1="4.93" x2="9.17" y1="4.93" y2="9.17"></line>
                      <line x1="14.83" x2="19.07" y1="14.83" y2="19.07"></line>
                      <line x1="14.83" x2="19.07" y1="9.17" y2="4.93"></line>
                      <line x1="14.83" x2="18.36" y1="9.17" y2="5.64"></line>
                      <line x1="4.93" x2="9.17" y1="19.07" y2="14.83"></line>
                    </svg>
                    <span>
                      Hilfe
                    </span>
                  </a>
                  <a href="#_" @click="dropdownOpen=false" class="relative flex cursor-pointer select-none hover:bg-base-300 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50" data-disabled>
                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2">
                      <path d="M17.5 19H9a7 7 0 1 1 6.71-9h1.79a4.5 4.5 0 1 1 0 9Z"></path>
                    </svg>
                    <span>
                      API
                    </span>
                  </a>
                  <div class="h-px my-1 -mx-1 bg-neutral-content"></div>
                  <a href="#_" @click="dropdownOpen=false" class="relative flex cursor-pointer select-none hover:bg-base-300 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50" data-cy="logout" hx-trigger="click" hx-post="/auth/logout">
                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2">
                      <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                      <polyline points="16 17 21 12 16 7"></polyline>
                      <line x1="21" x2="9" y1="12" y2="12"></line>
                    </svg>
                    <span>
                      Log out
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <!-- Page content here -->
        <div id="main-content" class="flex-1 flex-row container mx-auto overflow-y-auto">
          <div id="dashboard-view" class="w-full h-full p-6">
            <div class="flex flex-col gap-6">
              <div class="prose">
                <h1>
                  Einstellungen
                </h1>
              </div>
              <!-- Theme selection -->
              <div class="flex flex-wrap gap-6">
                <div class="card bg-base-200  prose w-full lg:w-fit">
                  <div class="card-body">
                    <h3 class="card-title">
                      Theme auswählen
                    </h3>
                    <form data-cy="theme-switcher" hx-post="/settings/theme">
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Light
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="light">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Retro
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="retro">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Corporate
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="corporate">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Dracula
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="dracula">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Nord
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="nord">
                        </label>
                      </div>
                      <div class="form-control">
                        <label class="label cursor-pointer gap-4">
                          <span class="label-text">
                            Dark
                          </span>
                          <input type="radio" name="theme" class="radio theme-controller" value="dark" checked>
                        </label>
                      </div>
                      <div class="card-actions justify-end">
                        <button data-cy="save-theme" type="submit" class="btn">
                          Bestätigen
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
                <!-- Reset application -->
                <div class="card bg-warning text-warning-content prose">
                  <div class="card-body">
                    <h3 class="card-title text-black">
                      Anwendung zurücksetzen
                      <i class="fas fa-exclamation-triangle"></i>
                    </h3>
                    <p>
                      Wenn du die Anwendung zurücksetzt, werden
                      <b>
                        ALLE
                      </b>
                      Daten gelöscht. Dazu gehören alle Benutzer und deren Trainingsdaten. Das betrifft auch deine Trainingsdaten, deine Einstellungen und dein Account. Du kannst die Anwendung dann wieder neu einrichten. Bist du sicher, dass du die Anwendung zurücksetzen möchtest?
                    </p>
                    <p>
                      Diese Aktion kann nicht rückgängig gemacht werden.
                    </p>
                    <form class="card-actions justify-end" hx-post="/settings/reset" hx-swap="none">
                      <button data-cy="reset" type="submit" class="btn btn-error">
                        Anwendung zurücksetzen
                      </button>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-cy="sidebar" class="drawer-side z-50">
        <label for="drawer" aria-label="close sidebar" data-cy="sidebar-overlay" class="drawer-overlay"></label>
        <div class="p-4 md:min-w-72 min-h-full bg-slate-400 shadow-lg text-black">
          <!-- Sidebar content here -->
          <h2 class="prose p4 mx-2 my-1 hidden lg:block text-black card-title">
            Cycling coach lab
          </h2>
          <ul class="menu mt-2"></ul>
        </div>
      </div>
    </div>
    <script defer src="/assets/toasts.js" type="text/javascript"></script>
  </body>
</html>
---

[TestRenderSettingsView - 1]
<div class="flex flex-col gap-6">
  <div class="prose">
    <h1>
      Einstellungen
    </h1>
  </div>
  <!-- Theme selection -->
  <div class="flex flex-wrap gap-6">
    <div class="card bg-base-200  prose w-full lg:w-fit">
      <div class="card-body">
        <h3 class="card-title">
          Theme auswählen
        </h3>
        <form data-cy="theme-switcher" hx-post="/settings/theme">
          <div class="form-control">
            <label class="label cursor-pointer gap-4">
              <span class="label-text">
                Light
              </span>
              <input type="radio" name="theme" class="radio theme-controller" value="light">
            </label>
          </div>
          <div class="form-control">
            <label class="label cursor-pointer gap-4">
              <span class="label-text">
                Retro
              </span>
              <input type="radio" name="theme" class="radio theme-controller" value="retro">
            </label>
          </div>
          <div class="form-control">
            <label class="label cursor-pointer gap-4">
              <span class="label-text">
                Corporate
              </span>
              <input type="radio" name="theme" class="radio theme-controller" value="corporate">
            </label>
          </div>
          <div class="form-control">
            <label class="label cursor-pointer gap-4">
              <span class="label-text">
                Dracula
              </span>
              <input type="radio" name="theme" class="radio theme-controller" value="dracula">
            </label>
          </div>
          <div class="form-control">
            <label class="label cursor-pointer gap-4">
              <span class="label-text">
                Nord
              </span>
              <input type="radio" name="theme" class="radio theme-controller" value="nord">
            </label>
          </div>
          <div class="form-control">
            <label class="label cursor-pointer gap-4">
              <span class="label-text">
                Dark
              </span>
              <input type="radio" name="theme" class="radio theme-controller" value="dark" checked>
            </label>
          </div>
          <div class="card-actions justify-end">
            <button data-cy="save-theme" type="submit" class="btn">
              Bestätigen
            </button>
          </div>
        </form>
      </div>
    </div>
    <!-- Reset application -->
    <div class="card bg-warning text-warning-content prose">
      <div class="card-body">
        <h3 class="card-title text-black">
          Anwendung zurücksetzen
          <i class="fas fa-exclamation-triangle"></i>
        </h3>
        <p>
          Wenn du die Anwendung zurücksetzt, werden
          <b>
            ALLE
          </b>
          Daten gelöscht. Dazu gehören alle Benutzer und deren Trainingsdaten. Das betrifft auch deine Trainingsdaten, deine Einstellungen und dein Account. Du kannst die Anwendung dann wieder neu einrichten. Bist du sicher, dass du die Anwendung zurücksetzen möchtest?
        </p>
        <p>
          Diese Aktion kann nicht rückgängig gemacht werden.
        </p>
        <form class="card-actions justify-end" hx-post="/settings/reset" hx-swap="none">
          <button data-cy="reset" type="submit" class="btn btn-error">
            Anwendung zurücksetzen
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
---
